--- a/index.html
+++ b/index.html
@@ -514,13 +514,13 @@ textarea {
 
 <header class="header">  
   <div class="container main-container">
-    <a class="logo" href="">
+    <a class="logo" href="index.html">
       <img class="logo_img" src="img/logo/7smol.png" alt="Master Builders VS LTD Logo" >
     </a>
     <nav class="navigation-menu" id="main-nav">
       <ul class="list mob-list">
         <li class="item">
-          <a class="item-menu" href="wood.html">HOME</a>
+          <a class="item-menu" href="index.html">HOME</a>
         </li>
         <li class="item">
           <a class="item-menu" href="#about-us">ABOUT US</a>
