--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -15,7 +15,7 @@
       <div class="container_policy">
         <main class="page_policy">
     <div class="logo_policy_container">
-        <a class="logo_policy" href="index.html">
+        <a class="logo_policy" href="https://alenafe61.github.io/air/index.html">
           <img class="logo_policy" src="https://www.mbvsltd.com/img/logo/7smol.png " alt="Master Builders VS LTD Logo">
         </a>
     </div>
