--- a/index.html
+++ b/index.html
@@ -397,9 +397,12 @@ color:black;
 }
 .ac-images-container{
   display: flex;
-    justify-content: space-between;
+  justify-content: space-evenly;
     text-align: center;
     flex-wrap: wrap;
+}
+.ac-image{
+  width: 160px;
 }
 .ac-image img{
   width: 160px;
