--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@ textarea {
       </section>
 
       
-      <section class="service-detail-section grey" id="service-fire-dampers">
+      <section class="service-detail-section" id="service-fire-dampers">
         <div class="container">
           <div class="service-detail-inner">
             <div class="service-detail-header">
@@ -973,15 +973,15 @@ textarea {
                     <p style="font-weight: 600;padding:0px 10px">Here are some of the most common issues faced by fire dampers:</p>
                     <div class="ac-images-container">
                       <div class="ac-image">
-                        <img src="icon/1 Fire damper/1.1Sticking_of_the_valve-removebg-preview.png" alt="Air Conditioner 1">
+                        <img src="icon/1 Fire damper/1.webp" alt="Air Conditioner 1">
                         <p style="font-weight: 600;">Sticking of the valve</p>
                       </div>
                       <div class="ac-image">
-                        <img src="icon/1 Fire damper/1.2Corrosion-removebg-preview.png" alt="Air Conditioner 2">
+                        <img src="icon/1 Fire damper/2.png" alt="Air Conditioner 2">
                         <p style="font-weight: 600;">Corrosion</p>
                       </div>
                       <div class="ac-image">
-                        <img src="icon/1 Fire damper/1.3Wear_of_sealing_materials-removebg-preview.png" alt="Air Conditioner 3">
+                        <img src="icon/1 Fire damper/3.webp" alt="Air Conditioner 3">
                         <p style="font-weight: 600;">Wear of sealing materials</p>
                       </div>
                       <div class="ac-image">
@@ -993,7 +993,7 @@ textarea {
                         <p style="font-weight: 600;">Lack of regular maintenance</p>
                       </div>
                       <div class="ac-image">
-                        <img src="icon/1 Fire damper/1.6Inadequate_ventilation_or_blockage_of_airflow-removebg-preview.png" alt="Air Conditioner 6">
+                        <img src="icon/1 Fire damper/6.jpg" alt="Air Conditioner 6">
                         <p style="font-weight: 600;">Inadequate ventilation or blockage of airflow</p>
                       </div>
                     </div>
@@ -1028,11 +1028,11 @@ textarea {
                     <p>Elevate your space with our efficient ventilation solutions in London. Our skilled technicians deliver expert installation, maintenance, and repair, ensuring your environment is equipped with optimal air quality. Trust in our swift, quality service for a fresh, energy-efficient atmosphere.</p>
                     <p style="padding:20px 10px ">Types of ventilation systems:</p>
                     <ul>
-                      <li><p>MECHANICAL VENTILATION</p>This system uses fans to exhaust stale air and introduce fresh air into the building. We can install and maintain various types of mechanical ventilation systems, including heat recovery ventilation (HRV) and energy recovery ventilation (ERV) systems, which help reduce energy costs by recovering heat or coolness from the exhaust air.</li>
-                      <li><p>NATURAL VENTILATION</p>We also provide installation and servicing for natural ventilation systems, which rely on natural airflow and pressure differences to ventilate a building. Properly designed natural ventilation can improve indoor air quality and reduce the need for mechanical ventilation.</li>
-                      <li><p>MIXED-MODE VENTILATION</p>This system combines natural and mechanical ventilation strategies to optimize airflow and energy efficiency. Our experts can design and install mixed-mode ventilation systems tailored to your building's specific requirements.</li>
-                      <li><p>VENTILATION SYSTEM MAINTENANCE</p>Regular maintenance is crucial to ensure your ventilation system operates efficiently and effectively. Our maintenance services include cleaning, filter replacement, and system inspections to identify and address any issues early on.</li>
-                      <li><p>REPAIRS AND UPGRADES</p> If your ventilation system is not performing as it should, our team can diagnose and repair any issues promptly. We can also recommend and implement upgrades to improve system performance and energy efficiency.</li>
+                      <li><p class="serv_title">MECHANICAL VENTILATION</p>This system uses fans to exhaust stale air and introduce fresh air into the building. We can install and maintain various types of mechanical ventilation systems, including heat recovery ventilation (HRV) and energy recovery ventilation (ERV) systems, which help reduce energy costs by recovering heat or coolness from the exhaust air.</li>
+                      <li><p class="serv_title">NATURAL VENTILATION</p>We also provide installation and servicing for natural ventilation systems, which rely on natural airflow and pressure differences to ventilate a building. Properly designed natural ventilation can improve indoor air quality and reduce the need for mechanical ventilation.</li>
+                      <li><p class="serv_title">MIXED-MODE VENTILATION</p>This system combines natural and mechanical ventilation strategies to optimize airflow and energy efficiency. Our experts can design and install mixed-mode ventilation systems tailored to your building's specific requirements.</li>
+                      <li><p class="serv_title">VENTILATION SYSTEM MAINTENANCE</p>Regular maintenance is crucial to ensure your ventilation system operates efficiently and effectively. Our maintenance services include cleaning, filter replacement, and system inspections to identify and address any issues early on.</li>
+                      <li><p class="serv_title">REPAIRS AND UPGRADES</p> If your ventilation system is not performing as it should, our team can diagnose and repair any issues promptly. We can also recommend and implement upgrades to improve system performance and energy efficiency.</li>
                     </ul>
                   </div>
                 </div>
@@ -1103,7 +1103,7 @@ textarea {
 
 
 
-      <section class="service-detail-section grey" id="service-prevention">
+      <section class="service-detail-section" id="service-prevention">
         <div class="container">
           <div class="service-detail-inner">
             <div class="service-detail-header">
@@ -1117,12 +1117,12 @@ textarea {
                     <p>Our prevention services are designed to ensure the efficient and reliable operation of your HVAC systems. We offer a range of services to help identify and address issues before they lead to costly repairs or downtime.</p>
                     <p style="padding:20px 10px ">Our prevention services include:</p>
                       <ul>
-                        <li><p>REGULAR INSPECTIONS</p>We conduct regular inspections of your HVAC systems to identify any potential issues or areas that may require attention. Our technicians will thoroughly inspect all components of your system and provide recommendations for any necessary repairs or upgrades.</li>
-                        <li><p>CLEANING AND MAINTENANCE</p> We offer professional cleaning and maintenance services to ensure your HVAC systems remain clean and free of debris. Regular cleaning can improve system performance and extend the life of your equipment.</li>
-                        <li><p>FILTER REPLACEMENT</p>We replace filters regularly to ensure optimal performance and air quality. Dirty filters can restrict airflow and cause your system to work harder, leading to higher energy bills and potential damage to your equipment.</li>
-                        <li><p>DUCT INSPECTION AND CLEANING</p>Our technicians will inspect and clean your ductwork to remove any accumulated dirt, dust, or debris. Clean ducts can improve air quality and system efficiency.</li>
-                        <li><p>SYSTEM ADJUSTMENTS AND CALIBRATION</p> We can adjust and calibrate your HVAC systems to ensure they are operating at peak performance. This can help improve energy efficiency and comfort levels in your building.</li>
-                        <li><p>ENVIRONMENTAL MONITORING</p>We offer environmental monitoring services to ensure your indoor air quality remains at an optimal level. We can provide recommendations for improvements if needed.</li>
+                        <li><p class="serv_title">REGULAR INSPECTIONS</p>We conduct regular inspections of your HVAC systems to identify any potential issues or areas that may require attention. Our technicians will thoroughly inspect all components of your system and provide recommendations for any necessary repairs or upgrades.</li>
+                        <li><p class="serv_title">CLEANING AND MAINTENANCE</p> We offer professional cleaning and maintenance services to ensure your HVAC systems remain clean and free of debris. Regular cleaning can improve system performance and extend the life of your equipment.</li>
+                        <li><p class="serv_title">FILTER REPLACEMENT</p>We replace filters regularly to ensure optimal performance and air quality. Dirty filters can restrict airflow and cause your system to work harder, leading to higher energy bills and potential damage to your equipment.</li>
+                        <li><p class="serv_title">DUCT INSPECTION AND CLEANING</p>Our technicians will inspect and clean your ductwork to remove any accumulated dirt, dust, or debris. Clean ducts can improve air quality and system efficiency.</li>
+                        <li><p class="serv_title">SYSTEM ADJUSTMENTS AND CALIBRATION</p> We can adjust and calibrate your HVAC systems to ensure they are operating at peak performance. This can help improve energy efficiency and comfort levels in your building.</li>
+                        <li><p class="serv_title">ENVIRONMENTAL MONITORING</p>We offer environmental monitoring services to ensure your indoor air quality remains at an optimal level. We can provide recommendations for improvements if needed.</li>
                       </ul>
                   </div>
                 </div>
