--- a/index.html
+++ b/index.html
@@ -1064,11 +1064,11 @@ textarea {
                         <p style="font-weight: 600;">Clogged filters</p>
                       </div>
                       <div class="ac-image">
-                        <img src="icon/2 Ventelation system/2.2Fan_wear-removebg-preview.png" alt="Air Conditioner 2">
+                        <img src="icon/2 Ventelation system/fan_wear.jpg" alt="Air Conditioner 2">
                         <p style="font-weight: 600;">Fan wear</p>
                       </div>
                       <div class="ac-image">
-                        <img src="icon/2 Ventelation system/2.3Air_leakage-removebg-preview.png" alt="Air Conditioner 3">
+                        <img src="icon/2 Ventelation system/leakage.jpg" alt="Air Conditioner 3">
                         <p style="font-weight: 600;">Air leakage</p>
                       </div>
                       <div class="ac-image">
@@ -1076,7 +1076,7 @@ textarea {
                         <p style="font-weight: 600;">Control and management issues</p>
                       </div>
                       <div class="ac-image">
-                        <img src="icon/2 Ventelation system/2.5Corrosion-removebg-preview.png" alt="Air Conditioner 5">
+                        <img src="icon/2 Ventelation system/2.png" alt="Air Conditioner 5">
                         <p style="font-weight: 600;">Corrosion</p>
                       </div>
                       <div class="ac-image">
@@ -1132,7 +1132,7 @@ textarea {
                     <p style="font-weight: 600;padding:0px 10px">HVAC System Preventative Maintenance Checklist:</p>
                     <div class="ac-images-container">
                       <div class="ac-image">
-                        <img src="icon/3 Prevention/3.1Regular_cleaning_and_servicing-removebg-preview.png" alt="Air Conditioner 1">
+                        <img src="icon/3 Prevention/cleaning.webp" alt="Air Conditioner 1">
                         <p style="font-weight: 600;">Regular cleaning and servicing</p>
                       </div>
                       <div class="ac-image">
@@ -1140,7 +1140,7 @@ textarea {
                         <p style="font-weight: 600;">Filter replacement</p>
                       </div>
                       <div class="ac-image">
-                        <img src="icon/3 Prevention/3.3Checking_and_adjusting_operational_parameters-removebg-preview.png" alt="Air Conditioner 3">
+                        <img src="icon/3 Prevention/check.webp" alt="Air Conditioner 3">
                         <p style="font-weight: 600;">Checking and adjusting operational parameters</p>
                       </div>
                       <div class="ac-image">
@@ -1148,7 +1148,7 @@ textarea {
                         <p style="font-weight: 600;">Inspection of seals and connections</p>
                       </div>
                       <div class="ac-image">
-                        <img src="icon/3 Prevention/3.5Personnel_training_and_testing-removebg-preview.png" alt="Air Conditioner 5">
+                        <img src="icon/3 Prevention/testting.jpg" alt="Air Conditioner 5">
                         <p style="font-weight: 600;">Personnel training and testing</p>
                       </div>
                       <div class="ac-image">
@@ -1156,7 +1156,7 @@ textarea {
                         <p style="font-weight: 600;">Environmental conditions monitoring</p>
                       </div>
                       <div class="ac-image">
-                        <img src="icon/3 Prevention/3.7Scheduled_maintenance_and_repair-removebg-preview.png" alt="Air Conditioner 6">
+                        <img src="icon/3 Prevention/repair.jpg" alt="Air Conditioner 6">
                         <p style="font-weight: 600;">Scheduled maintenance and repair</p>
                       </div>
                       <div class="ac-image">
